--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "an-array-of-english-words": "^2.0.0",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.10",
     "react": "^18.3.1",
